Fix avalanche snowball hits, add dodging practice mode, change projectile hit event